# libzakformcgi

./: .gitignore  Makefile.am  autogen.sh  configure.ac  libzakformcgi.pc.in
debian/: changelog  control  copyright  libzakformcgi-dev.install  libzakformcgi.install
debian/patches/: 0001-DESTDIR-support.patch  0002-Old-Glib-version.patch  0003-Glib-old-object-macro.patch  0004-Glib-old-version-dependency-in-pkg-config-file.patch  series
po/: POTFILES.in  it.po
src/: Makefile.am  commons.c  commons.h  form.c  form.h  formelement.c  formelement.h  formelementcheck.c  formelementcheck.h  formelementemail.c  formelementemail.h  formelementfile.c  formelementfile.h  formelementhidden.c  formelementhidden.h  formelementpassword.c  formelementpassword.h  formelementradio.c  formelementradio.h  formelementselect.c  formelementselect.h  formelementstring.c  formelementstring.h  formelementsubmit.c  formelementsubmit.h  formelementtext.c  formelementtext.h  formelementtextarea.c  formelementtextarea.h  libzakformcgi.h
tests/: Makefile.am  form.c  form_xml.c  form_xml.xml
